--- a/PackageParser/.classpath
+++ b/PackageParser/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/javalib.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.core.resources_3.6.1.R36x_v20110131-1630.jar"/>
